[package]
name = "cal-jambonz-actix-web"
version = "0.1.15"
edition = "2024"
description = "Jambonz Verbs"
license = "MIT"

[dependencies]
cal-jambonz = "0.1.69"
actix-web = "4.10.2"
actix-web-httpauth = "0.8.2"
actix-ws = "0.3.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
futures-util = { version = "0.3.31", features = ["sink"] }
tokio = { version = "1.44.1", features = ["rt", "time", "macros", "rt-multi-thread"] }
uuid = { version = "1.16.0", features = ["v4"] }
env_logger = "0.11.8"